horizontal card styles fixed - overflow: scroll eliminated

--- a/src/app/shared/components/horizontal-card/horizontal-card.component.scss
+++ b/src/app/shared/components/horizontal-card/horizontal-card.component.scss
@@ -7,7 +7,6 @@
  }
 
  .card-img-container {
-    overflow: scroll;
     margin-bottom: 1rem;
     padding: 0rem 1rem 0rem 1rem;
  }
@@ -25,7 +24,6 @@
 
  .card-text-container {
      padding: 0.5rem 0.5rem 0rem 1rem;
-     overflow: scroll;
  }
 
 .card-text {
